<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.appInfo.AppInfoFragment">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/txtLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gitHubApp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtWelcome"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_layout_margin_start"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:layout_marginEnd="8dp"
            android:text="@string/txtWelcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <TextView
            android:id="@+id/txtFeatures"
            style="@style/txtSmallBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/features"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtWelcome"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

        <TextView
            android:id="@+id/txtSearch"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_layout_margin_start"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/searchFunction"
            app:layout_constraintStart_toStartOf="@+id/txtFeatures"
            app:layout_constraintTop_toBottomOf="@+id/txtFeatures" />

        <TextView
            android:id="@+id/txtRepoDetails"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/repoDetails"
            app:layout_constraintStart_toStartOf="@+id/txtSearch"
            app:layout_constraintTop_toBottomOf="@+id/txtSearch" />

        <TextView
            android:id="@+id/txtFav"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/favourites"
            app:layout_constraintStart_toStartOf="@+id/txtRepoDetails"
            app:layout_constraintTop_toBottomOf="@+id/txtRepoDetails" />

        <TextView
            android:id="@+id/textView7"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/webView"
            app:layout_constraintStart_toStartOf="@+id/txtFav"
            app:layout_constraintTop_toBottomOf="@+id/txtFav" />

        <TextView
            android:id="@+id/textView8"
            style="@style/txtSmallBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/howToUse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_layout_margin_start"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:layout_marginEnd="@dimen/text_layout_margin_end"
            android:text="@string/enterKeyword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/detailedInformation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/saveRepository"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/swipeToDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView13"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/explore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            style="@style/txtSmallBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/note"
            app:layout_constraintStart_toStartOf="@+id/txtFeatures"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView15"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_layout_margin_start"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/requiresInternetConnection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>